@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-13T00:40:53Z",
+  "timestamp" : "2024-05-13T08:12:26Z",
   "count_outdated" : 1257,
   "uniques_outdated" : 790,
-  "count" : 1269,
-  "uniques" : 801,
+  "count" : 1270,
+  "uniques" : 802,
   "clones" : [
     {
       "timestamp": "2024-05-04T00:00:00Z",
@@ -52,6 +52,15 @@
     },
     {
       "timestamp": "2024-05-12T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-05-13T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
