@@ -1,5 +1,5 @@
 {
-  "count": 12,
+  "count": 13,
   "uniques": 3,
   "clones": [
     {
@@ -29,6 +29,11 @@
     },
     {
       "timestamp": "2024-05-12T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-05-13T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
