@@ -1,3 +1,12 @@
+2024-05-13T08:12:26Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9059490064 # 268
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-13
+* notice: last 14d: unq all: 3 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 790 1257 / 801 1269
+* notice: next accum: outdated-unq outdated-all / unq all: 790 1257 / 802 1270
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-05-13]
+
 2024-05-13T00:40:53Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9055455262 # 267
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-13
